--- a/VacIT/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/VacIT/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using VacIT.Areas.Identity
 @using VacIT.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using VacIT.Areas.Identity.Data
+@using VacIT.Models
