--- a/VacIT/Views/Shared/_LoginPartial.cshtml
+++ b/VacIT/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using VacIT.Areas.Identity.Data
+@using VacIT.Models
 
 @inject SignInManager<VacITUser> SignInManager
 @inject UserManager<VacITUser> UserManager
