--- a/VacIT/wwwroot/css/site.css
+++ b/VacIT/wwwroot/css/site.css
@@ -1,5 +1,14 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    /* FONTS */
+    --titles: "bebas-neue";
+    --headings: "roboto-condensed";
+    --regular: "Arial";
+    /* COLORS */
+    --gray: #333333;
+    --orange: #F15A24;
+    --white: #FFF;
+    --black: #000;
 }
 
 @media (min-width: 768px) {
