--- a/VacIT/Views/Shared/_LoginPartial.cshtml
+++ b/VacIT/Views/Shared/_LoginPartial.cshtml
@@ -8,8 +8,20 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a id="Sollicitaties" class="nav-link text-light" asp-controller="Page" asp-action="Sollicitaties">MIJN SOLLICITATIES</a>
+        <a id="vacatures" class="nav-link text-light" asp-controller="Page" asp-action="Vacatures">VACATURES</a>
     </li>
+    @if (User.IsInRole("Admin") || User.IsInRole("Candidate"))
+    {
+        <li class="nav-item">
+            <a id="mijnSollicitaties" class="nav-link text-light" asp-controller="Page" asp-action="MijnSollicitaties">MIJN SOLLICITATIES</a>
+        </li>
+    }
+    @if (User.IsInRole("Admin") || User.IsInRole("Employer"))
+    {
+        <li class="nav-item">
+            <a id="mijnVacatures" class="nav-link text-light" asp-controller="Page" asp-action="MijnVacatures">MIJN VACATURES</a>
+        </li>
+    }
     <li class="nav-item">
         <a id="manage" class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">MIJN PROFIEL</a>
     </li>
