--- a/VacIT/Views/Shared/_LoginPartial.cshtml
+++ b/VacIT/Views/Shared/_LoginPartial.cshtml
@@ -34,6 +34,9 @@
 else
 {
     <li class="nav-item">
+        <a id="vacatures" class="nav-link text-light" asp-controller="Page" asp-action="Vacatures">VACATURES</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link text-light" id="login" asp-area="Identity" asp-page="/Account/Login">INLOGGEN</a>
     </li>
     <li class="nav-item">
