--- a/VacIT/Views/Page/EditVacature.cshtml
+++ b/VacIT/Views/Page/EditVacature.cshtml
@@ -1,45 +1,67 @@
-﻿@model VacITPageModel;
+﻿@model VacIT.Models.JobOffer
 
 @{
-    ViewData["Title"] = "Vacature aanpassen";
+    ViewData["Title"] = "EditVacature";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>@Model._jobOffer.Title</p>
+<h1>EditVacature</h1>
+
+<h4>JobOffer</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="EditVacature">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Technology" class="control-label"></label>
+                <input asp-for="Technology" class="form-control" />
+                <span asp-validation-for="Technology" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Level" class="control-label"></label>
+                <input asp-for="Level" class="form-control" />
+                <span asp-validation-for="Level" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="City" class="control-label"></label>
+                <input asp-for="City" class="form-control" />
+                <span asp-validation-for="City" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DateOfPublication" class="control-label"></label>
+                <input asp-for="DateOfPublication" class="form-control" />
+                <span asp-validation-for="DateOfPublication" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="VacITEmployerId" class="control-label"></label>
+                <select asp-for="VacITEmployerId" class ="form-control" asp-items="ViewBag.VacITEmployerId"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
 
 <div>
-    <table>
-        <tr>
-            <th>Naam</th>
-            <td>@Model._jobOffer.Name</td>
-        </tr>
-        <tr>
-            <th>Titel</th>
-            <td>@Model._jobOffer.Title</td>
-        </tr>
-        <tr>
-            <th>Beschrijving</th>
-            <td>@Model._jobOffer.Description</td>
-        </tr>
-        <tr>
-            <th>Technologie</th>
-            <td>@Model._jobOffer.Technology</td>
-        </tr>
-        <tr>
-            <th>Niveau</th>
-            <td>@Model._jobOffer.Level</td>
-        </tr>
-        <tr>
-            <th>Stad</th>
-            <td>@Model._jobOffer.City</td>
-        </tr>
-        <tr>
-            <th>Datum van publicatie</th>
-            <td>@Model._jobOffer.DateOfPublication</td>
-        </tr>
-        <tr>
-            <th>Werkgever</th>
-            <td>@Model._jobOffer.VacITEmployer.Name</td>
-        </tr>
-    </table>
+    <a asp-action="Index">Back to List</a>
 </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
