Vacature kan nu aangepast worden

--- a/VacIT/Views/Page/EditVacature.cshtml
+++ b/VacIT/Views/Page/EditVacature.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "EditVacature";
 }
 
-<h1>EditVacature</h1>
+<h1>Vacature aanpassen</h1>
 
-<h4>JobOffer</h4>
+<h4>@Model.Title</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <input asp-for="Description" class="form-control"/>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -44,22 +44,24 @@
             </div>
             <div class="form-group">
                 <label asp-for="DateOfPublication" class="control-label"></label>
-                <input asp-for="DateOfPublication" class="form-control" />
+                <input asp-for="DateOfPublication" class="form-control" readonly />
                 <span asp-validation-for="DateOfPublication" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="VacITEmployerId" class="control-label"></label>
-                <select asp-for="VacITEmployerId" class ="form-control" asp-items="ViewBag.VacITEmployerId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <input asp-for="Id" type="hidden" />
+            <input asp-for="DateOfPublication" type="hidden" />
+            <input asp-for="VacITEmployerId" type="hidden" />
+            <input asp-for="VacITEmployer" type="hidden" />
+
+            <div class="form-group mt-2 mb-4">
+                <input type="submit" value="Update" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Page" asp-action="MijnVacatures">Terug</a>
 </div>
 
 @section Scripts {
