--- a/VacIT/Views/Page/Vacature.cshtml
+++ b/VacIT/Views/Page/Vacature.cshtml
@@ -32,7 +32,7 @@
             <td>@Model._jobOffer.City</td>
         </tr>
         <tr>
-            <th>Datum van publicatie</th>
+            <th>Publicatiedatum</th>
             <td>@Model._jobOffer.DateOfPublication</td>
         </tr>
         <tr>
@@ -40,4 +40,4 @@
             <td>@Model._jobOffer.VacITEmployer.Name</td>
         </tr>
     </table>
-</div
+</div>
