--- a/VacIT/Views/Page/MijnVacatures.cshtml
+++ b/VacIT/Views/Page/MijnVacatures.cshtml
@@ -25,7 +25,7 @@
                 <td>@jobOffer.Technology</td>
                 <td>@jobOffer.Level</td>
                 <td>@jobOffer.City</td>
-                <td><a asp-controller="Page" asp-action="EditVacature" asp-route-id="@jobOffer.Id">Edit</a></td>
+                <td><a class="btn btn-primary ml-2" asp-controller="Page" asp-action="EditVacature" asp-route-id="@jobOffer.Id">Edit</a></td>
             </tr>
         }
     </table>
