--- a/VacIT/Views/Page/MijnVacatures.cshtml
+++ b/VacIT/Views/Page/MijnVacatures.cshtml
@@ -5,6 +5,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
+<a class="btn btn-primary" asp-controller="Page" asp-action="NieuweVacature">Nieuwe Vacature</a>
+
 <div>
     <table>
         <tr>
