Mogelijkheid tot inzien van kandidaten per vacature aangemaakt

--- a/VacIT/Views/Page/MijnVacatures.cshtml
+++ b/VacIT/Views/Page/MijnVacatures.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Mijn Vacatures";
 }
 <h1>@ViewData["Title"]</h1>
+<hr />
 
 <a class="btn btn-primary" asp-controller="Page" asp-action="NieuweVacature">Nieuwe Vacature</a>
 
@@ -22,12 +23,14 @@
         {
             <tr>
                 <td>@jobOffer.DateOfPublication</td>
-                <td> <a asp-controller="Page" asp-action="Vacature" asp-route-id="@jobOffer.Id">@jobOffer.Name</a></td>
+                <td>@jobOffer.Name</td>
                 <td>@jobOffer.Description</td>
                 <td>@jobOffer.Technology</td>
                 <td>@jobOffer.Level</td>
                 <td>@jobOffer.City</td>
+                <td><a class="btn btn-primary" asp-controller="Page" asp-action="Kandidaten" asp-route-id="@jobOffer.Id">Kandidaten</a></td>
                 <td><a class="btn btn-primary" asp-controller="Page" asp-action="EditVacature" asp-route-id="@jobOffer.Id">Edit</a></td>
+                <td><a class="btn btn-primary" asp-controller="Page" asp-action="Vacature" asp-route-id="@jobOffer.Id">Details</a></td>
                 <td><a class="btn btn-danger" asp-controller="Page" asp-action="DeleteVacature" asp-route-id="@jobOffer.Id">Delete</a></td>
             </tr>
         }
