--- a/VacIT/Views/Page/Vacatures.cshtml
+++ b/VacIT/Views/Page/Vacatures.cshtml
@@ -6,7 +6,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <div>
-    <table>
+    <table class="table">
         <tr>
             <th>Naam</th>
             <th>Titel</th>
